# python-project-52

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
.github/workflows/: django-test.yml  flake8.yml
staticfiles/: staticfiles.json
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  tests.py  urls.py  views.py
task_manager/statuses/: asgi.py  forms.py  settings.py  tests.py  urls.py  views.py  wsgi.py
task_manager/tasks/: filters.py  forms.py  models.py  settings.py  tests.py  urls.py  views.py
task_manager/templates/: base.html
task_manager/templates/labels/: labels_list.html
task_manager/templates/statuses/: statuses_list.html
task_manager/templates/tasks/: task.html  tasks_list.html
task_manager/templates/users/: users_list.html
task_manager/users/: forms.py  models.py  settings.py  tests.py  urls.py  views.py
