[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Antesser <ahriman.kun@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django-bootstrap4 = "^22.3"
load-dotenv = "^0.1.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
